--- a/main/MiAICR.apk/res/values-hr/plurals.xml
+++ b/main/MiAICR.apk/res/values-hr/plurals.xml
@@ -67,6 +67,10 @@
         <item quantity="other">odabrano %d stavki</item>
         <item quantity="one">odabrana %d stavka</item>
     </plurals>
+	 <plurals name="miuix_indexer_selected">
+        <item quantity="one">Odabrano %1$d stavki</item>
+        <item quantity="other">Odabrana %1$d stavka</item>
+     </plurals>
 	<plurals name="mtrl_badge_content_description">
         <item quantity="other">%d novih obavijesti</item>
         <item quantity="one">%d nova obavijest</item>
