--- a/main/MiuiAudioMonitor.apk/res/values-hr/plurals.xml
+++ b/main/MiuiAudioMonitor.apk/res/values-hr/plurals.xml
@@ -80,6 +80,10 @@
         <item quantity="few">%d odabrane stavke</item>
         <item quantity="other">%d odabranih stavki</item>
     </plurals>
+	 <plurals name="miuix_indexer_selected">
+        <item quantity="one">Odabrano %1$d stavki</item>
+        <item quantity="other">Odabrana %1$d stavka</item>
+     </plurals>
     <plurals name="num_minutes_ago">
         <item quantity="one">Prije 1 minute</item>
         <item quantity="few">prije %d min</item>
