--- a/main/FileExplorer.apk/res/values-hr/plurals.xml
+++ b/main/FileExplorer.apk/res/values-hr/plurals.xml
@@ -232,6 +232,10 @@
         <item quantity="other">%1$d sek</item>
         <item quantity="one">%1$d sek</item>
     </plurals>
+	<plurals name="tap_share_send_fail_with_too_many">
+        <item quantity="one">"Nije moguće poslati. Odabrano previše %d stavki."</item>
+        <item quantity="other">"Nije moguće poslati. Odabrano previše %d stavka."</item>
+    </plurals>
     <plurals name="text_group_count">
         <item quantity="other">stavke: %d</item>
         <item quantity="one">%d stavka</item>
