--- a/Croatian/main/Telecom.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/Telecom.apk/res/values-hr/plurals.xml
@@ -56,6 +56,10 @@
         <item quantity="other">%d novih obavijesti</item>
         <item quantity="one">%d nova obavijest</item>
     </plurals>
+	 <plurals name="miuix_indexer_selected">
+        <item quantity="one">Odabrana %1$d stavka</item>
+        <item quantity="other">Odabrano %1$d stavki</item>
+     </plurals>
     <plurals name="notification_missedCallTitle_miui">
         <item quantity="other">Propušteni pozivi</item>
         <item quantity="one">Propušten poziv</item>
