--- a/Croatian/main/TouchAssistant.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/TouchAssistant.apk/res/values-hr/plurals.xml
@@ -64,6 +64,10 @@
         <item quantity="other">odabrano %d stavki</item>
         <item quantity="one">odabrana %d stavka</item>
     </plurals>
+	<plurals name="miuix_indexer_selected">
+        <item quantity="one">Odabrana %1$d stavka</item>
+        <item quantity="other">Odabrano %1$d stavki</item>
+     </plurals>
     <plurals name="num_minutes_ago">
         <item quantity="other">prije %d min</item>
         <item quantity="one">prije 1 minutu</item>
