--- a/Croatian/main/MiuiGallery.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/MiuiGallery.apk/res/values-hr/plurals.xml
@@ -875,6 +875,22 @@
         <item quantity="other">%d videozapisa</item>
         <item quantity="one">%d videozapis</item>
     </plurals>
+	     <plurals name="video_hours_talkback">
+        <item quantity="one">%d sat</item>
+        <item quantity="other">%d sati</item>
+     </plurals>
+     <plurals name="video_millseconds_talkback">
+        <item quantity="one">%d millisekunda</item>
+        <item quantity="other">%d millisekundi</item>
+     </plurals>
+     <plurals name="video_minutes_talkback">
+        <item quantity="one">%d minuta</item>
+        <item quantity="other">%d minuta</item>
+     </plurals>
+     <plurals name="video_seconds_talkback">
+        <item quantity="one">%d sekundu</item>
+        <item quantity="other">%d sekundi</item>
+     </plurals>
 	     <plurals name="title_age_hint_day">
         <item quantity="other">%d dana</item>
         <item quantity="one">%d dan</item>
