--- a/Croatian/main/Email.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/Email.apk/res/values-hr/plurals.xml
@@ -216,6 +216,10 @@
         <item quantity="other">%d novih obavijesti</item>
         <item quantity="one">%d nova obavijest</item>
     </plurals>
+	     <plurals name="miuix_indexer_selected">
+        <item quantity="one">Odabrana %1$d stavke</item>
+        <item quantity="other">Odabrano %1$d stavki</item>
+     </plurals>
     <plurals name="new_incoming_messages_many">
         <item quantity="other">Nove poruke: %1$d.</item>
         <item quantity="one">%1$d nova poruka.</item>
