--- a/Croatian/main/TeleService.apk/res/values-hr/arrays.xml
+++ b/Croatian/main/TeleService.apk/res/values-hr/arrays.xml
@@ -316,6 +316,18 @@
         <item>Audioizvor</item>
         <item>MIDI</item>
     </string-array>
+	 <string-array name="uplmn_prefer_network_mode_td_choices">
+        <item>GSM</item>
+        <item>TD-SCDMA</item>
+        <item>LTE</item>
+        <item>Trostruki način</item>
+     </string-array>
+     <string-array name="uplmn_prefer_network_mode_w_choices">
+        <item>GSM</item>
+        <item>WCDMA</item>
+        <item>LTE</item>
+        <item>Trostruki način</item>
+    </string-array>
     <string-array name="wifi_status">
         <item></item>
         <item>Skeniranje…</item>
