--- a/Croatian/main/MiShare.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/MiShare.apk/res/values-hr/plurals.xml
@@ -412,6 +412,14 @@
         <item quantity="one">%1$d kontakt</item>
         <item quantity="other">%1$d kontakata</item>
     </plurals>
+	 <plurals name="tapshare_activity_send_describe_note">
+        <item quantity="one">%1$d bilješka</item>
+        <item quantity="other">%1$d bilježaka</item>
+    </plurals>
+    <plurals name="tapshare_activity_send_describe_soundrecord">
+        <item quantity="one">%1$d snimka</item>
+        <item quantity="other">%1$d snimaka</item>
+    </plurals>
     <plurals name="tapshare_describe_contact">
         <item quantity="one">%1$d kontakt</item>
         <item quantity="other">%1$d kontakata</item>
@@ -420,13 +428,37 @@
         <item quantity="one">%1$d poveznica</item>
         <item quantity="other">%1$d poveznica</item>
     </plurals>
+	 <plurals name="tapshare_describe_note">
+        <item quantity="one">%1$d bilješka</item>
+        <item quantity="other">%1$d bilježaka</item>
+    </plurals>
+    <plurals name="tapshare_describe_soundrecord">
+        <item quantity="one">%1$d snimka</item>
+        <item quantity="other">%1$d snimaka</item>
+    </plurals>
     <plurals name="tapshare_receive_describe_contact">
         <item quantity="one">Primanje %1$d kontakta</item>
         <item quantity="other">Primanje %1$d kontakata</item>
     </plurals>
+    <plurals name="tapshare_receive_describe_note">
+        <item quantity="one">Primanje %1$d bilješke</item>
+        <item quantity="other">Primanje %1$d bilježaka</item>
+    </plurals>
+	 <plurals name="tapshare_receive_describe_soundrecord">
+        <item quantity="one">Primanje %1$d snimke</item>
+        <item quantity="other">Primanje %1$d snimaka</item>
+    </plurals>
     <plurals name="tapshare_receive_describe_link">
         <item quantity="one">Primanje %1$d poveznice</item>
         <item quantity="other">Primanje %1$d poveznica</item>
+    </plurals>
+	 <plurals name="tapshare_receiving_describe_note">
+        <item quantity="one">Primanje %1$d bilješke…</item>
+        <item quantity="other">Primanje %1$d bilježaka…</item>
+    </plurals>
+    <plurals name="tapshare_receiving_describe_soundrecord">
+        <item quantity="one">Primanje %1$d snimke…</item>
+        <item quantity="other">Primanje %1$d snimaka…</item>
     </plurals>
     <plurals name="tapshare_receiving_describe_contact">
         <item quantity="one">Primanje %1$d kontakta</item>
@@ -456,6 +488,14 @@
         <item quantity="one">Slanje %1$d dinamične snimke</item>
         <item quantity="other">Slanje %1$d dinamičnih snimaka</item>
     </plurals>
+	 <plurals name="tapshare_send_describe_note">
+        <item quantity="one">Slanje %1$d bilješke</item>
+        <item quantity="other">Slanje %1$d bilježaka</item>
+    </plurals>
+    <plurals name="tapshare_send_describe_soundrecord">
+        <item quantity="one">Slanje %1$d snimke</item>
+        <item quantity="other">Slanje %1$d snimaka</item>
+    </plurals>
     <plurals name="tapshare_send_describe_video">
         <item quantity="one">Slanje %1$d videozapisa</item>
         <item quantity="other">Slanje %1$d videozapisa</item>
@@ -468,4 +508,12 @@
         <item quantity="one">Slanje %1$d poveznice</item>
         <item quantity="other">Slanje %1$d poveznica</item>
 		</plurals>
+	 <plurals name="tapshare_sending_describe_note">
+        <item quantity="one">Slanje %1$d bilješke…</item>
+        <item quantity="other">Slanje %1$d bilježaka…</item>
+    </plurals>
+    <plurals name="tapshare_sending_describe_soundrecord">
+        <item quantity="one">Slanje %1$d snimke…</item>
+        <item quantity="other">Slanje %1$d snimaka…</item>
+    </plurals>
 </resources>
