--- a/Croatian/main/FileExplorer.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/FileExplorer.apk/res/values-hr/plurals.xml
@@ -33,18 +33,6 @@
         <item quantity="other">%1$d datoteka od WeChat privremenih videozapisa će biti izbrisani. Izraditi sigurnosnu kopiju?</item>
         <item quantity="one">%1$d datoteka od WeChat privremenih videozapisa će biti izbrisani. Izraditi sigurnosnu kopiju?</item>
     </plurals>
-    <plurals name="clockin_day_count">
-        <item quantity="other">Prijavljeni %1$s dana za redom, nastavite tako!</item>
-        <item quantity="one">Prijavljen %1$s dan za redom, nastavite tako!</item>
-    </plurals>
-    <plurals name="clockin_days">
-        <item quantity="other">Prijavljeni %1$s dana za redom</item>
-        <item quantity="one">Prijavljen %1$s dan za redom</item>
-    </plurals>
-    <plurals name="clockin_new_chip">
-        <item quantity="other">Imate &lt;font color=#faea47>&lt;b>%d&lt;/b>&lt;/font> bodova</item>
-        <item quantity="one">Imate &lt;font color=#faea47>&lt;b>%d&lt;/b>&lt;/font> bod</item>
-    </plurals>
     <plurals name="days">
         <item quantity="other">%1$d dana</item>
         <item quantity="one">%1$d dan</item>
@@ -53,6 +41,10 @@
         <item quantity="other">Prije %1$d dana</item>
         <item quantity="one">Prije %1$d dan</item>
     </plurals>
+	<plurals name="delete_cload_nas_files">
+        <item quantity="one">"Izbrisati %1$d odabranu stavku sa svih uređaja, clouda i Xiaomi SmartStoragea? Moći ćete vratiti nedavno izbrisane stavke u Xiaomi Cloudu i aplikaciji Xiaomi SmartStorage."</item>
+        <item quantity="other">"Izbrisati %1$d odabranih stavki sa svih uređaja, clouda i Xiaomi SmartStoragea? Moći ćete vratiti nedavno izbrisane stavke u Xiaomi Cloudu i aplikaciji Xiaomi SmartStorage."</item>
+    </plurals>
     <plurals name="delete_files_confirm">
         <item quantity="other">Izbrisati datoteke: %1$d</item>
         <item quantity="one">Izbrisati %1$d datoteku</item>
@@ -60,6 +52,10 @@
     <plurals name="delete_folders_confirm">
         <item quantity="other">" i mape: %1$d?"</item>
         <item quantity="one">" i %1$d mapu?"</item>
+    </plurals>
+	<plurals name="delete_nas_files">
+        <item quantity="one">"Izbrisati %1$d odabranu stavku sa svih uređaja i Xiaomi SmartStoragea? Nedavno izbrisane stavke moći ćete vratiti u aplikaciji Xiaomi SmartStorage."</item>
+        <item quantity="other">"Izbrisati %1$d odabranih stavki sa svih uređaja i Xiaomi SmartStoragea? Nedavno izbrisane stavke moći ćete vratiti u aplikaciji Xiaomi SmartStorage."</item>
     </plurals>
     <plurals name="directory_item_count">
         <item quantity="other">%d stavki</item>
@@ -88,6 +84,10 @@
     <plurals name="file_notify_title_wechat_video_expire">
         <item quantity="other">%1$d datoteka od WeChat videozapisa će isteći</item>
         <item quantity="one">%1$d datoteka od WeChat videozapisa će isteći</item>
+    </plurals>
+	<plurals name="file_num_content">
+        <item quantity="one">%2$d datoteka koja uključuje %1$s</item>
+        <item quantity="other">%2$d datoteka koje uključuju %1$s</item>
     </plurals>
     <plurals name="follow_count">
         <item quantity="other">&lt;font color=#fc7050>%d&lt;/font> sljedbenika</item>
